clusters/vps/apps/nextcloud/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: nextcloud
spec:
  ports:
    - port: 5432
  selector:
    app: nextcloud-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
  namespace: nextcloud
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud-db
  template:
    metadata:
      labels:
        app: nextcloud-db
    spec:
      containers:
      - name: db
        image: postgres:15-alpine
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-data
        hostPath:
          path: /opt/docker/nextcloud/db
          type: DirectoryOrCreate
