clusters/vps/apps/nextcloud/nextcloud.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-headers
  namespace: nextcloud
spec:
  headers:
    customFrameOptionsValue: SAMEORIGIN
    stsSeconds: 15552000
    stsIncludeSubdomains: true
    stsPreload: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nextcloud-data
          mountPath: /var/www/html
      volumes:
      - name: nextcloud-data
        hostPath:
          path: /opt/docker/nextcloud/data
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
  namespace: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-https
  namespace: nextcloud
spec:
  entryPoints: [websecure]
  routes:
  - kind: Rule
    match: Host(`cloud.nasson.co.za`)
    middlewares:
    - name: nextcloud-headers
    services:
    - name: nextcloud-service
      port: 80
  tls: {}
